--- a/portfolio/templates/portfolio/portfolio.html
+++ b/portfolio/templates/portfolio/portfolio.html
@@ -1,24 +1,64 @@
 <!DOCTYPE html>
 <html>
 	<head>
+        {% load static %}
+        <link rel="stylesheet" href="{% static 'portfolio/Style.css' %}">
+		<link rel="stylesheet" href="https://unpkg.com/flexboxgrid2@7.2.1/flexboxgrid2.min.css">
 	</head>
 	<body>
 		<header>
-            <div>
+            <div class="nav">
+                <div class="row">
+                    <div class="col-xs-12 col-md-12 col-lg-12">
+                        <div class="navbar">
+                            <div class="navbar-left">
+                                <div class="navbar-logo">
+                                    <img src="{% static 'portfolio/logo.png' %}">
+                                </div>
+                                <div class="nickname">
+                                    <p>Ramzes</p>
+                                </div>
+                            </div>
+                            <div class="navbar-right">
+                                <div class="navbar-blog">
+                                    <a href="{% url 'blog:all_blogs' %}">Blog</a>
+                                </div>
+                                <div class="">
+                                    <a>Resume</a>
+                                </div>
+                                <div class="">
+                                    <a>Contacts</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+		</header>
+		<main style="margin: auto;">
+            <div style="margin: auto;">
 				<h1>Портфолио</h1>
 			</div>
-		</header>
-		<main>
+            <div style="margin: auto;">
+                <a href="{% url 'blog:all_blogs' %}">Блог</a>
+            </div>
+            <div style="margin: auto;">
+                <img src="{% static 'portfolio/Self.jpg' %}" alt="">
+            </div>
             <div>
                 {% for project in projects %}
                     <h2>{{ project.title }}</h2>
                     <p>{{ project.description }}</p>
-                    <img src="{{ project.image.url }}" height="200px" width="200px">
+                    <img src="{{ project.image.url }}" alt="" height="200px" width="200px">
                     {% if project.url %}
                     <a href="{{ project.url }}">Ссылка</a>
                     {% endif %}
                 {% endfor %}
             </div>
+        <div>
+
+        </div>
 		</main>
 	</body>
 </html>
