--- a/portfolio/templates/portfolio/portfolio.html
+++ b/portfolio/templates/portfolio/portfolio.html
@@ -21,44 +21,48 @@
                             </div>
                             <div class="navbar-right">
                                 <div class="navbar-blog">
-                                    <a href="{% url 'blog:all_blogs' %}">Blog</a>
+                                    <a href="{% url 'blog:all_blogs' %}"><button>Blog</button></a>
                                 </div>
                                 <div class="">
-                                    <a>Resume</a>
+                                    <a><button>Resume</button></a>
                                 </div>
                                 <div class="">
-                                    <a>Contacts</a>
+                                    <a><button>Contacts</button></a>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-
 		</header>
-		<main style="margin: auto;">
-            <div style="margin: auto;">
-				<h1>Портфолио</h1>
-			</div>
-            <div style="margin: auto;">
-                <a href="{% url 'blog:all_blogs' %}">Блог</a>
+		<main>
+            <div class="portfolio">
+                <div class="row">
+                    <div class="col-xs-12 col-md-12 col-lg-12">
+                        <div class="self">
+                            <img src="{% static 'portfolio/self-2.png' %}" alt="">
+                        </div>
+                        <hr>
+                        <div class="projects">
+                            <div class="row">
+                                {% for project in projects %}
+                                    <div class="col-xs-12 col-md-6 col-lg-4">
+                                        <div class="project">
+                                            <a {% if project.url %} href="{{ project.url }}" {% endif %}>
+                                                <img src="{{ project.image.url }}" alt="">
+                                            </a>
+                                            <div class="project-info">
+                                                <h2>{{ project.title }}</h2>
+                                                <p>{{ project.description|safe }}</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                {% endfor %}
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div style="margin: auto;">
-                <img src="{% static 'portfolio/Self.jpg' %}" alt="">
-            </div>
-            <div>
-                {% for project in projects %}
-                    <h2>{{ project.title }}</h2>
-                    <p>{{ project.description }}</p>
-                    <img src="{{ project.image.url }}" alt="" height="200px" width="200px">
-                    {% if project.url %}
-                    <a href="{{ project.url }}">Ссылка</a>
-                    {% endif %}
-                {% endfor %}
-            </div>
-        <div>
-
-        </div>
 		</main>
 	</body>
 </html>
