--- a/portfolio/static/portfolio/Style.css
+++ b/portfolio/static/portfolio/Style.css
@@ -9,10 +9,11 @@ html {
 }
 
 .nav {
-    background-color: white;
+    background-color: black;
     position: fixed;
     width: 100%;
     height: 80px;
+    box-shadow: 0 3px 10px #a91111;
 }
 
 .navbar {
@@ -41,7 +42,7 @@ html {
     display: flex;
     padding: 26px;
     font-size: 28px;
-    color: red;
+    color: #a91111;
 }
 
 .navbar-right {
@@ -57,7 +58,7 @@ html {
 
 .navbar-right a {
     text-decoration: none;
-    color: black;
+    color: #a91111;
 }
 
 .navbar-right button {
@@ -65,7 +66,8 @@ html {
     border-radius: 40px;
     padding: 16px;
     font-size: 20px;
-    color: black;
+    color: #a91111;
+    background-color: black;
     box-shadow: 0 3px 10px #a91111;
     transition: all 0.3s ease-in;
 }
@@ -76,7 +78,7 @@ html {
     border-color: #a91111;
     box-shadow: none;
     border-radius: 0;
-    color: white;
+    color: black;
 }
 
 .navbar-right button:active {
@@ -104,6 +106,10 @@ main {
     height: 100%;
 }
 
+hr {
+    border-color: #a91111;
+}
+
 .projects {
     margin: 50px 20px 0;
 }
@@ -111,8 +117,9 @@ main {
 .project {
     height: 300px;
     margin-bottom: 15px;
-    background-color: white;
+    background-color: black;
     border-radius: 10px;
+    color: #a91111;
 }
 
 .project-info {
