--- a/portfolio/templates/portfolio/portfolio.html
+++ b/portfolio/templates/portfolio/portfolio.html
@@ -4,6 +4,8 @@
         {% load static %}
         <link rel="stylesheet" href="{% static 'portfolio/Style.css' %}">
 		<link rel="stylesheet" href="https://unpkg.com/flexboxgrid2@7.2.1/flexboxgrid2.min.css">
+        <link rel="icon" type="image/png" href="{% static "/portfolio/logo.png" %}">
+        <title>Ramzes</title>
 	</head>
 	<body>
 		<header>
