--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -1,21 +1,28 @@
 <!DOCTYPE html>
-<html class="page-blog">
+<html>
 	<head>
         {% load static %}
-        <link rel="stylesheet" href="{% static 'portfolio/Style.css' %}">
-        <link rel="stylesheet" href="https://unpkg.com/flexboxgrid2@7.2.1/flexboxgrid2.min.css">
-        <link rel="icon" type="image/png" href="{% static "/portfolio/logo.png" %}">
+        <link rel="stylesheet" href="{% static 'portfolio/css/main.css' %}">
+        <link rel="icon" type="image/png" href="{% static "/portfolio/img/logo.png" %}">
         <title>{{ blog.title }}</title>
 	</head>
 	<body>
 		<header>
-            <div class="post-detail-title">
-                <h1>{{ blog.title }}</h1>
-            </div>
+
 		</header>
-		<main>
-            <div class="post-detail-text">
-                {{ blog.description | linebreaks }}
+		<main class="main-main">
+            <div class="main-blog-content">
+                <div class="main-blog-detail">
+                    <div class="main-blog-post-detail-title">
+                        <h1>{{ blog.title }}</h1>
+                    </div>
+                    <div class="main-blog-post-detail-date">
+                        <p>{{ blog.release_date|date:'M d Y G:i' }}</p>
+                    </div>
+                    <div class="main-blog-post-detail-text">
+                        {{ blog.description|safe|linebreaks }}
+                    </div>
+                </div>
             </div>
 		</main>
 	</body>
